# bin_picking_mockup

./: .env  AGENTS.md  CMakeLists.txt  README.md  docker-compose-humble.yaml  docker-compose.yaml  package.xml
.github/workflows/: release.yml
action/: FakeBinPick.action
api/: requirements.txt  robot_adapter.py  wms_api.py
docker/: Dockerfile  Dockerfile.humble  entrypoint.sh
hmi/: index.html  nginx.conf
include/bin_picking_mockup/: barcode_publisher.hpp  door_handler.hpp  estop_handler.hpp  fake_bin_picking.hpp  stack_light_handler.hpp
launch/: bin_picking_mockup.launch.py
src/: barcode_publisher.cpp  door_handler.cpp  estop_handler.cpp  fake_bin_picking.cpp  main.cpp  stack_light_handler.cpp
srv/: GetBarcode.srv  SetDoorState.srv  SetEStopState.srv
